semantico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NOT
    PALAVRARESERVADA
    TIPO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracao
Rule 2     declaracao -> declaracao_variavel
Rule 3     declaracao -> declaracao_funcao
Rule 4     declaracao -> declaracao_estrutura
Rule 5     declaracao -> estrutura_controle
Rule 6     declaracao -> comentario
Rule 7     declaracao_variavel -> tipo ID SEMICOLON
Rule 8     declaracao_variavel -> tipo ID EQUALS expressao SEMICOLON
Rule 9     tipo -> INT
Rule 10    tipo -> FLOAT
Rule 11    tipo -> TEXTO
Rule 12    declaracao_funcao -> tipo ID LPAREN parametros RPAREN bloco
Rule 13    parametros -> parametros COMMA parametros
Rule 14    parametros -> tipo ID
Rule 15    parametros -> tipo ID LBRACKET RBRACKET
Rule 16    bloco -> LBRACE declaracao RBRACE
Rule 17    comentario -> COMMENT
Rule 18    comentario -> MULTICOMMENT
Rule 19    expressoes -> atribuicao
Rule 20    atribuicao -> ID EQUALS expressao
Rule 21    atribuicao -> ID PLUSEQUAL expressao
Rule 22    atribuicao -> ID MINUSEQUAL expressao
Rule 23    atribuicao -> ID TIMESEQUAL expressao
Rule 24    atribuicao -> ID DIVEQUAL expressao
Rule 25    atribuicao -> ID MODEQUAL expressao
Rule 26    atribuicao -> ID ANDANDEQUAL expressao
Rule 27    atribuicao -> ID OROREQUAL expressao
Rule 28    atribuicao -> ID EQUALS ID
Rule 29    atribuicao -> ID PLUSEQUAL ID
Rule 30    atribuicao -> ID MINUSEQUAL ID
Rule 31    atribuicao -> ID TIMESEQUAL ID
Rule 32    atribuicao -> ID DIVEQUAL ID
Rule 33    atribuicao -> ID MODEQUAL ID
Rule 34    atribuicao -> ID ANDANDEQUAL ID
Rule 35    atribuicao -> ID OROREQUAL ID
Rule 36    estrutura_controle -> IF LPAREN expressao RPAREN bloco
Rule 37    estrutura_controle -> IF LPAREN expressao RPAREN bloco ELSE bloco
Rule 38    estrutura_controle -> WHILE LPAREN expressao RPAREN bloco
Rule 39    estrutura_controle -> FOR LPAREN expressao SEMICOLON expressao SEMICOLON expressao RPAREN bloco
Rule 40    estrutura_controle -> RETURN expressao
Rule 41    declaracao_estrutura -> STRUCT ID LBRACE declaracao_variavel RBRACE
Rule 42    array -> ID LBRACKET expressao RBRACKET
Rule 43    array -> ID LBRACKET RBRACKET
Rule 44    array -> ID LBRACE expressoes RBRACE
Rule 45    expressao -> expressao_logica
Rule 46    expressao_logica -> expressao_relacional
Rule 47    expressao_logica -> expressao_logica ANDAND expressao_relacional
Rule 48    expressao_logica -> expressao_logica OROR expressao_relacional
Rule 49    expressao_relacional -> expressao_aritmetica
Rule 50    expressao_relacional -> expressao_aritmetica GREATER expressao_aritmetica
Rule 51    expressao_relacional -> expressao_aritmetica GREATEREQUAL expressao_aritmetica
Rule 52    expressao_relacional -> expressao_aritmetica LESS expressao_aritmetica
Rule 53    expressao_relacional -> expressao_aritmetica LESSEQUAL expressao_aritmetica
Rule 54    expressao_relacional -> expressao_aritmetica NOTEQUAL expressao_aritmetica
Rule 55    expressao_relacional -> expressao_aritmetica EQUALEQUAL expressao_aritmetica
Rule 56    expressao_aritmetica -> expressao_multiplicativa
Rule 57    expressao_aritmetica -> expressao_aritmetica PLUS expressao_multiplicativa
Rule 58    expressao_aritmetica -> expressao_aritmetica MINUS expressao_multiplicativa
Rule 59    expressao_multiplicativa -> expressao_unaria
Rule 60    expressao_multiplicativa -> expressao_multiplicativa TIMES expressao_unaria
Rule 61    expressao_multiplicativa -> expressao_multiplicativa DIVIDE expressao_unaria
Rule 62    expressao_multiplicativa -> expressao_multiplicativa MODULO expressao_unaria
Rule 63    expressao_unaria -> expressao_postfix
Rule 64    expressao_unaria -> MINUS expressao_unaria
Rule 65    expressao_unaria -> PLUSPLUS expressao_postfix
Rule 66    expressao_unaria -> MINUSMINUS expressao_postfix
Rule 67    expressao_postfix -> primaria
Rule 68    expressao_postfix -> primaria array
Rule 69    expressao_postfix -> primaria LPAREN argumentos RPAREN
Rule 70    expressao_postfix -> primaria DOT ID
Rule 71    argumentos -> expressoes
Rule 72    argumentos -> <empty>
Rule 73    primaria -> ID
Rule 74    primaria -> INT
Rule 75    primaria -> FLOAT
Rule 76    primaria -> TEXTO
Rule 77    primaria -> LPAREN expressao RPAREN

Terminals, with rules where they appear

ANDAND               : 47
ANDANDEQUAL          : 26 34
COMMA                : 13
COMMENT              : 17
DIVEQUAL             : 24 32
DIVIDE               : 61
DOT                  : 70
ELSE                 : 37
EQUALEQUAL           : 55
EQUALS               : 8 20 28
FLOAT                : 10 75
FOR                  : 39
GREATER              : 50
GREATEREQUAL         : 51
ID                   : 7 8 12 14 15 20 21 22 23 24 25 26 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 41 42 43 44 70 73
IF                   : 36 37
INT                  : 9 74
LBRACE               : 16 41 44
LBRACKET             : 15 42 43
LESS                 : 52
LESSEQUAL            : 53
LPAREN               : 12 36 37 38 39 69 77
MINUS                : 58 64
MINUSEQUAL           : 22 30
MINUSMINUS           : 66
MODEQUAL             : 25 33
MODULO               : 62
MULTICOMMENT         : 18
NOT                  : 
NOTEQUAL             : 54
OROR                 : 48
OROREQUAL            : 27 35
PALAVRARESERVADA     : 
PLUS                 : 57
PLUSEQUAL            : 21 29
PLUSPLUS             : 65
RBRACE               : 16 41 44
RBRACKET             : 15 42 43
RETURN               : 40
RPAREN               : 12 36 37 38 39 69 77
SEMICOLON            : 7 8 39 39
STRUCT               : 41
TEXTO                : 11 76
TIMES                : 60
TIMESEQUAL           : 23 31
TIPO                 : 
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

argumentos           : 69
array                : 68
atribuicao           : 19
bloco                : 12 36 37 37 38 39
comentario           : 6
declaracao           : 1 16
declaracao_estrutura : 4
declaracao_funcao    : 3
declaracao_variavel  : 2 41
estrutura_controle   : 5
expressao            : 8 20 21 22 23 24 25 26 27 36 37 38 39 39 39 40 42 77
expressao_aritmetica : 49 50 50 51 51 52 52 53 53 54 54 55 55 57 58
expressao_logica     : 45 47 48
expressao_multiplicativa : 56 57 58 60 61 62
expressao_postfix    : 63 65 66
expressao_relacional : 46 47 48
expressao_unaria     : 59 60 61 62 64
expressoes           : 44 71
parametros           : 12 13 13
primaria             : 67 68 69 70
programa             : 0
tipo                 : 7 8 12 14 15

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracao
    (2) declaracao -> . declaracao_variavel
    (3) declaracao -> . declaracao_funcao
    (4) declaracao -> . declaracao_estrutura
    (5) declaracao -> . estrutura_controle
    (6) declaracao -> . comentario
    (7) declaracao_variavel -> . tipo ID SEMICOLON
    (8) declaracao_variavel -> . tipo ID EQUALS expressao SEMICOLON
    (12) declaracao_funcao -> . tipo ID LPAREN parametros RPAREN bloco
    (41) declaracao_estrutura -> . STRUCT ID LBRACE declaracao_variavel RBRACE
    (36) estrutura_controle -> . IF LPAREN expressao RPAREN bloco
    (37) estrutura_controle -> . IF LPAREN expressao RPAREN bloco ELSE bloco
    (38) estrutura_controle -> . WHILE LPAREN expressao RPAREN bloco
    (39) estrutura_controle -> . FOR LPAREN expressao SEMICOLON expressao SEMICOLON expressao RPAREN bloco
    (40) estrutura_controle -> . RETURN expressao
    (17) comentario -> . COMMENT
    (18) comentario -> . MULTICOMMENT
    (9) tipo -> . INT
    (10) tipo -> . FLOAT
    (11) tipo -> . TEXTO

    STRUCT          shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    RETURN          shift and go to state 13
    COMMENT         shift and go to state 14
    MULTICOMMENT    shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    TEXTO           shift and go to state 18

    programa                       shift and go to state 1
    declaracao                     shift and go to state 2
    declaracao_variavel            shift and go to state 3
    declaracao_funcao              shift and go to state 4
    declaracao_estrutura           shift and go to state 5
    estrutura_controle             shift and go to state 6
    comentario                     shift and go to state 7
    tipo                           shift and go to state 8

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracao .

    $end            reduce using rule 1 (programa -> declaracao .)


state 3

    (2) declaracao -> declaracao_variavel .

    $end            reduce using rule 2 (declaracao -> declaracao_variavel .)
    RBRACE          reduce using rule 2 (declaracao -> declaracao_variavel .)


state 4

    (3) declaracao -> declaracao_funcao .

    $end            reduce using rule 3 (declaracao -> declaracao_funcao .)
    RBRACE          reduce using rule 3 (declaracao -> declaracao_funcao .)


state 5

    (4) declaracao -> declaracao_estrutura .

    $end            reduce using rule 4 (declaracao -> declaracao_estrutura .)
    RBRACE          reduce using rule 4 (declaracao -> declaracao_estrutura .)


state 6

    (5) declaracao -> estrutura_controle .

    $end            reduce using rule 5 (declaracao -> estrutura_controle .)
    RBRACE          reduce using rule 5 (declaracao -> estrutura_controle .)


state 7

    (6) declaracao -> comentario .

    $end            reduce using rule 6 (declaracao -> comentario .)
    RBRACE          reduce using rule 6 (declaracao -> comentario .)


state 8

    (7) declaracao_variavel -> tipo . ID SEMICOLON
    (8) declaracao_variavel -> tipo . ID EQUALS expressao SEMICOLON
    (12) declaracao_funcao -> tipo . ID LPAREN parametros RPAREN bloco

    ID              shift and go to state 19


state 9

    (41) declaracao_estrutura -> STRUCT . ID LBRACE declaracao_variavel RBRACE

    ID              shift and go to state 20


state 10

    (36) estrutura_controle -> IF . LPAREN expressao RPAREN bloco
    (37) estrutura_controle -> IF . LPAREN expressao RPAREN bloco ELSE bloco

    LPAREN          shift and go to state 21


state 11

    (38) estrutura_controle -> WHILE . LPAREN expressao RPAREN bloco

    LPAREN          shift and go to state 22


state 12

    (39) estrutura_controle -> FOR . LPAREN expressao SEMICOLON expressao SEMICOLON expressao RPAREN bloco

    LPAREN          shift and go to state 23


state 13

    (40) estrutura_controle -> RETURN . expressao
    (45) expressao -> . expressao_logica
    (46) expressao_logica -> . expressao_relacional
    (47) expressao_logica -> . expressao_logica ANDAND expressao_relacional
    (48) expressao_logica -> . expressao_logica OROR expressao_relacional
    (49) expressao_relacional -> . expressao_aritmetica
    (50) expressao_relacional -> . expressao_aritmetica GREATER expressao_aritmetica
    (51) expressao_relacional -> . expressao_aritmetica GREATEREQUAL expressao_aritmetica
    (52) expressao_relacional -> . expressao_aritmetica LESS expressao_aritmetica
    (53) expressao_relacional -> . expressao_aritmetica LESSEQUAL expressao_aritmetica
    (54) expressao_relacional -> . expressao_aritmetica NOTEQUAL expressao_aritmetica
    (55) expressao_relacional -> . expressao_aritmetica EQUALEQUAL expressao_aritmetica
    (56) expressao_aritmetica -> . expressao_multiplicativa
    (57) expressao_aritmetica -> . expressao_aritmetica PLUS expressao_multiplicativa
    (58) expressao_aritmetica -> . expressao_aritmetica MINUS expressao_multiplicativa
    (59) expressao_multiplicativa -> . expressao_unaria
    (60) expressao_multiplicativa -> . expressao_multiplicativa TIMES expressao_unaria
    (61) expressao_multiplicativa -> . expressao_multiplicativa DIVIDE expressao_unaria
    (62) expressao_multiplicativa -> . expressao_multiplicativa MODULO expressao_unaria
    (63) expressao_unaria -> . expressao_postfix
    (64) expressao_unaria -> . MINUS expressao_unaria
    (65) expressao_unaria -> . PLUSPLUS expressao_postfix
    (66) expressao_unaria -> . MINUSMINUS expressao_postfix
    (67) expressao_postfix -> . primaria
    (68) expressao_postfix -> . primaria array
    (69) expressao_postfix -> . primaria LPAREN argumentos RPAREN
    (70) expressao_postfix -> . primaria DOT ID
    (73) primaria -> . ID
    (74) primaria -> . INT
    (75) primaria -> . FLOAT
    (76) primaria -> . TEXTO
    (77) primaria -> . LPAREN expressao RPAREN

    MINUS           shift and go to state 29
    PLUSPLUS        shift and go to state 32
    MINUSMINUS      shift and go to state 33
    ID              shift and go to state 36
    INT             shift and go to state 37
    FLOAT           shift and go to state 38
    TEXTO           shift and go to state 39
    LPAREN          shift and go to state 35

    expressao                      shift and go to state 24
    expressao_logica               shift and go to state 25
    expressao_relacional           shift and go to state 26
    expressao_aritmetica           shift and go to state 27
    expressao_multiplicativa       shift and go to state 28
    expressao_unaria               shift and go to state 30
    expressao_postfix              shift and go to state 31
    primaria                       shift and go to state 34

state 14

    (17) comentario -> COMMENT .

    $end            reduce using rule 17 (comentario -> COMMENT .)
    RBRACE          reduce using rule 17 (comentario -> COMMENT .)


state 15

    (18) comentario -> MULTICOMMENT .

    $end            reduce using rule 18 (comentario -> MULTICOMMENT .)
    RBRACE          reduce using rule 18 (comentario -> MULTICOMMENT .)


state 16

    (9) tipo -> INT .

    ID              reduce using rule 9 (tipo -> INT .)


state 17

    (10) tipo -> FLOAT .

    ID              reduce using rule 10 (tipo -> FLOAT .)


state 18

    (11) tipo -> TEXTO .

    ID              reduce using rule 11 (tipo -> TEXTO .)


state 19

    (7) declaracao_variavel -> tipo ID . SEMICOLON
    (8) declaracao_variavel -> tipo ID . EQUALS expressao SEMICOLON
    (12) declaracao_funcao -> tipo ID . LPAREN parametros RPAREN bloco

    SEMICOLON       shift and go to state 40
    EQUALS          shift and go to state 41
    LPAREN          shift and go to state 42


state 20

    (41) declaracao_estrutura -> STRUCT ID . LBRACE declaracao_variavel RBRACE

    LBRACE          shift and go to state 43


state 21

    (36) estrutura_controle -> IF LPAREN . expressao RPAREN bloco
    (37) estrutura_controle -> IF LPAREN . expressao RPAREN bloco ELSE bloco
    (45) expressao -> . expressao_logica
    (46) expressao_logica -> . expressao_relacional
    (47) expressao_logica -> . expressao_logica ANDAND expressao_relacional
    (48) expressao_logica -> . expressao_logica OROR expressao_relacional
    (49) expressao_relacional -> . expressao_aritmetica
    (50) expressao_relacional -> . expressao_aritmetica GREATER expressao_aritmetica
    (51) expressao_relacional -> . expressao_aritmetica GREATEREQUAL expressao_aritmetica
    (52) expressao_relacional -> . expressao_aritmetica LESS expressao_aritmetica
    (53) expressao_relacional -> . expressao_aritmetica LESSEQUAL expressao_aritmetica
    (54) expressao_relacional -> . expressao_aritmetica NOTEQUAL expressao_aritmetica
    (55) expressao_relacional -> . expressao_aritmetica EQUALEQUAL expressao_aritmetica
    (56) expressao_aritmetica -> . expressao_multiplicativa
    (57) expressao_aritmetica -> . expressao_aritmetica PLUS expressao_multiplicativa
    (58) expressao_aritmetica -> . expressao_aritmetica MINUS expressao_multiplicativa
    (59) expressao_multiplicativa -> . expressao_unaria
    (60) expressao_multiplicativa -> . expressao_multiplicativa TIMES expressao_unaria
    (61) expressao_multiplicativa -> . expressao_multiplicativa DIVIDE expressao_unaria
    (62) expressao_multiplicativa -> . expressao_multiplicativa MODULO expressao_unaria
    (63) expressao_unaria -> . expressao_postfix
    (64) expressao_unaria -> . MINUS expressao_unaria
    (65) expressao_unaria -> . PLUSPLUS expressao_postfix
    (66) expressao_unaria -> . MINUSMINUS expressao_postfix
    (67) expressao_postfix -> . primaria
    (68) expressao_postfix -> . primaria array
    (69) expressao_postfix -> . primaria LPAREN argumentos RPAREN
    (70) expressao_postfix -> . primaria DOT ID
    (73) primaria -> . ID
    (74) primaria -> . INT
    (75) primaria -> . FLOAT
    (76) primaria -> . TEXTO
    (77) primaria -> . LPAREN expressao RPAREN

    MINUS           shift and go to state 29
    PLUSPLUS        shift and go to state 32
    MINUSMINUS      shift and go to state 33
    ID              shift and go to state 36
    INT             shift and go to state 37
    FLOAT           shift and go to state 38
    TEXTO           shift and go to state 39
    LPAREN          shift and go to state 35

    expressao                      shift and go to state 44
    expressao_logica               shift and go to state 25
    expressao_relacional           shift and go to state 26
    expressao_aritmetica           shift and go to state 27
    expressao_multiplicativa       shift and go to state 28
    expressao_unaria               shift and go to state 30
    expressao_postfix              shift and go to state 31
    primaria                       shift and go to state 34

state 22

    (38) estrutura_controle -> WHILE LPAREN . expressao RPAREN bloco
    (45) expressao -> . expressao_logica
    (46) expressao_logica -> . expressao_relacional
    (47) expressao_logica -> . expressao_logica ANDAND expressao_relacional
    (48) expressao_logica -> . expressao_logica OROR expressao_relacional
    (49) expressao_relacional -> . expressao_aritmetica
    (50) expressao_relacional -> . expressao_aritmetica GREATER expressao_aritmetica
    (51) expressao_relacional -> . expressao_aritmetica GREATEREQUAL expressao_aritmetica
    (52) expressao_relacional -> . expressao_aritmetica LESS expressao_aritmetica
    (53) expressao_relacional -> . expressao_aritmetica LESSEQUAL expressao_aritmetica
    (54) expressao_relacional -> . expressao_aritmetica NOTEQUAL expressao_aritmetica
    (55) expressao_relacional -> . expressao_aritmetica EQUALEQUAL expressao_aritmetica
    (56) expressao_aritmetica -> . expressao_multiplicativa
    (57) expressao_aritmetica -> . expressao_aritmetica PLUS expressao_multiplicativa
    (58) expressao_aritmetica -> . expressao_aritmetica MINUS expressao_multiplicativa
    (59) expressao_multiplicativa -> . expressao_unaria
    (60) expressao_multiplicativa -> . expressao_multiplicativa TIMES expressao_unaria
    (61) expressao_multiplicativa -> . expressao_multiplicativa DIVIDE expressao_unaria
    (62) expressao_multiplicativa -> . expressao_multiplicativa MODULO expressao_unaria
    (63) expressao_unaria -> . expressao_postfix
    (64) expressao_unaria -> . MINUS expressao_unaria
    (65) expressao_unaria -> . PLUSPLUS expressao_postfix
    (66) expressao_unaria -> . MINUSMINUS expressao_postfix
    (67) expressao_postfix -> . primaria
    (68) expressao_postfix -> . primaria array
    (69) expressao_postfix -> . primaria LPAREN argumentos RPAREN
    (70) expressao_postfix -> . primaria DOT ID
    (73) primaria -> . ID
    (74) primaria -> . INT
    (75) primaria -> . FLOAT
    (76) primaria -> . TEXTO
    (77) primaria -> . LPAREN expressao RPAREN

    MINUS           shift and go to state 29
    PLUSPLUS        shift and go to state 32
    MINUSMINUS      shift and go to state 33
    ID              shift and go to state 36
    INT             shift and go to state 37
    FLOAT           shift and go to state 38
    TEXTO           shift and go to state 39
    LPAREN          shift and go to state 35

    expressao                      shift and go to state 45
    expressao_logica               shift and go to state 25
    expressao_relacional           shift and go to state 26
    expressao_aritmetica           shift and go to state 27
    expressao_multiplicativa       shift and go to state 28
    expressao_unaria               shift and go to state 30
    expressao_postfix              shift and go to state 31
    primaria                       shift and go to state 34

state 23

    (39) estrutura_controle -> FOR LPAREN . expressao SEMICOLON expressao SEMICOLON expressao RPAREN bloco
    (45) expressao -> . expressao_logica
    (46) expressao_logica -> . expressao_relacional
    (47) expressao_logica -> . expressao_logica ANDAND expressao_relacional
    (48) expressao_logica -> . expressao_logica OROR expressao_relacional
    (49) expressao_relacional -> . expressao_aritmetica
    (50) expressao_relacional -> . expressao_aritmetica GREATER expressao_aritmetica
    (51) expressao_relacional -> . expressao_aritmetica GREATEREQUAL expressao_aritmetica
    (52) expressao_relacional -> . expressao_aritmetica LESS expressao_aritmetica
    (53) expressao_relacional -> . expressao_aritmetica LESSEQUAL expressao_aritmetica
    (54) expressao_relacional -> . expressao_aritmetica NOTEQUAL expressao_aritmetica
    (55) expressao_relacional -> . expressao_aritmetica EQUALEQUAL expressao_aritmetica
    (56) expressao_aritmetica -> . expressao_multiplicativa
    (57) expressao_aritmetica -> . expressao_aritmetica PLUS expressao_multiplicativa
    (58) expressao_aritmetica -> . expressao_aritmetica MINUS expressao_multiplicativa
    (59) expressao_multiplicativa -> . expressao_unaria
    (60) expressao_multiplicativa -> . expressao_multiplicativa TIMES expressao_unaria
    (61) expressao_multiplicativa -> . expressao_multiplicativa DIVIDE expressao_unaria
    (62) expressao_multiplicativa -> . expressao_multiplicativa MODULO expressao_unaria
    (63) expressao_unaria -> . expressao_postfix
    (64) expressao_unaria -> . MINUS expressao_unaria
    (65) expressao_unaria -> . PLUSPLUS expressao_postfix
    (66) expressao_unaria -> . MINUSMINUS expressao_postfix
    (67) expressao_postfix -> . primaria
    (68) expressao_postfix -> . primaria array
    (69) expressao_postfix -> . primaria LPAREN argumentos RPAREN
    (70) expressao_postfix -> . primaria DOT ID
    (73) primaria -> . ID
    (74) primaria -> . INT
    (75) primaria -> . FLOAT
    (76) primaria -> . TEXTO
    (77) primaria -> . LPAREN expressao RPAREN

    MINUS           shift and go to state 29
    PLUSPLUS        shift and go to state 32
    MINUSMINUS      shift and go to state 33
    ID              shift and go to state 36
    INT             shift and go to state 37
    FLOAT           shift and go to state 38
    TEXTO           shift and go to state 39
    LPAREN          shift and go to state 35

    expressao                      shift and go to state 46
    expressao_logica               shift and go to state 25
    expressao_relacional           shift and go to state 26
    expressao_aritmetica           shift and go to state 27
    expressao_multiplicativa       shift and go to state 28
    expressao_unaria               shift and go to state 30
    expressao_postfix              shift and go to state 31
    primaria                       shift and go to state 34

state 24

    (40) estrutura_controle -> RETURN expressao .

    $end            reduce using rule 40 (estrutura_controle -> RETURN expressao .)
    RBRACE          reduce using rule 40 (estrutura_controle -> RETURN expressao .)


state 25

    (45) expressao -> expressao_logica .
    (47) expressao_logica -> expressao_logica . ANDAND expressao_relacional
    (48) expressao_logica -> expressao_logica . OROR expressao_relacional

    $end            reduce using rule 45 (expressao -> expressao_logica .)
    RBRACE          reduce using rule 45 (expressao -> expressao_logica .)
    RPAREN          reduce using rule 45 (expressao -> expressao_logica .)
    SEMICOLON       reduce using rule 45 (expressao -> expressao_logica .)
    RBRACKET        reduce using rule 45 (expressao -> expressao_logica .)
    ANDAND          shift and go to state 47
    OROR            shift and go to state 48


state 26

    (46) expressao_logica -> expressao_relacional .

    ANDAND          reduce using rule 46 (expressao_logica -> expressao_relacional .)
    OROR            reduce using rule 46 (expressao_logica -> expressao_relacional .)
    $end            reduce using rule 46 (expressao_logica -> expressao_relacional .)
    RBRACE          reduce using rule 46 (expressao_logica -> expressao_relacional .)
    RPAREN          reduce using rule 46 (expressao_logica -> expressao_relacional .)
    SEMICOLON       reduce using rule 46 (expressao_logica -> expressao_relacional .)
    RBRACKET        reduce using rule 46 (expressao_logica -> expressao_relacional .)


state 27

    (49) expressao_relacional -> expressao_aritmetica .
    (50) expressao_relacional -> expressao_aritmetica . GREATER expressao_aritmetica
    (51) expressao_relacional -> expressao_aritmetica . GREATEREQUAL expressao_aritmetica
    (52) expressao_relacional -> expressao_aritmetica . LESS expressao_aritmetica
    (53) expressao_relacional -> expressao_aritmetica . LESSEQUAL expressao_aritmetica
    (54) expressao_relacional -> expressao_aritmetica . NOTEQUAL expressao_aritmetica
    (55) expressao_relacional -> expressao_aritmetica . EQUALEQUAL expressao_aritmetica
    (57) expressao_aritmetica -> expressao_aritmetica . PLUS expressao_multiplicativa
    (58) expressao_aritmetica -> expressao_aritmetica . MINUS expressao_multiplicativa

    ANDAND          reduce using rule 49 (expressao_relacional -> expressao_aritmetica .)
    OROR            reduce using rule 49 (expressao_relacional -> expressao_aritmetica .)
    $end            reduce using rule 49 (expressao_relacional -> expressao_aritmetica .)
    RBRACE          reduce using rule 49 (expressao_relacional -> expressao_aritmetica .)
    RPAREN          reduce using rule 49 (expressao_relacional -> expressao_aritmetica .)
    SEMICOLON       reduce using rule 49 (expressao_relacional -> expressao_aritmetica .)
    RBRACKET        reduce using rule 49 (expressao_relacional -> expressao_aritmetica .)
    GREATER         shift and go to state 49
    GREATEREQUAL    shift and go to state 50
    LESS            shift and go to state 51
    LESSEQUAL       shift and go to state 52
    NOTEQUAL        shift and go to state 53
    EQUALEQUAL      shift and go to state 54
    PLUS            shift and go to state 55
    MINUS           shift and go to state 56


state 28

    (56) expressao_aritmetica -> expressao_multiplicativa .
    (60) expressao_multiplicativa -> expressao_multiplicativa . TIMES expressao_unaria
    (61) expressao_multiplicativa -> expressao_multiplicativa . DIVIDE expressao_unaria
    (62) expressao_multiplicativa -> expressao_multiplicativa . MODULO expressao_unaria

    GREATER         reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    GREATEREQUAL    reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    LESS            reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    LESSEQUAL       reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    NOTEQUAL        reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    EQUALEQUAL      reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    PLUS            reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    MINUS           reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    ANDAND          reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    OROR            reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    $end            reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    RBRACE          reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    RPAREN          reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    SEMICOLON       reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    RBRACKET        reduce using rule 56 (expressao_aritmetica -> expressao_multiplicativa .)
    TIMES           shift and go to state 57
    DIVIDE          shift and go to state 58
    MODULO          shift and go to state 59


state 29

    (64) expressao_unaria -> MINUS . expressao_unaria
    (63) expressao_unaria -> . expressao_postfix
    (64) expressao_unaria -> . MINUS expressao_unaria
    (65) expressao_unaria -> . PLUSPLUS expressao_postfix
    (66) expressao_unaria -> . MINUSMINUS expressao_postfix
    (67) expressao_postfix -> . primaria
    (68) expressao_postfix -> . primaria array
    (69) expressao_postfix -> . primaria LPAREN argumentos RPAREN
    (70) expressao_postfix -> . primaria DOT ID
    (73) primaria -> . ID
    (74) primaria -> . INT
    (75) primaria -> . FLOAT
    (76) primaria -> . TEXTO
    (77) primaria -> . LPAREN expressao RPAREN
